--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -16,6 +16,11 @@
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.js.ini $
 
 
+SP.JS_SELECT_CATEGORY="Select category"
+SP.JS_PLEASE_SELECT_SECTION_FIRST="Please select section first"
+SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
+SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
+
 ;=========
 ; SobiPro 1.0 RC4
 ;=========
