--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -18,16 +18,32 @@
 ;=========
 ; Joomla! Menu
 ;=========
+
+SP.SOBI_SELECT_ENTRY="Select Entry"
+SP.SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
+SP.SOBI_CLOSE_WINDOW="Close"
+SP.SOBI_SELECT_ENTRY_TYPE="Type something…"
+SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Type the entry title/name"
+SP.OTYPE_ENTRY="Entry"
+SP.OTYPE_CATEGORY="Category"
+SP.OTYPE_SECTION="Section"
+SP.TASK_SEARCH="Search"
+SP.TASK_ENTRY.ADD="Add New"
+SOBI_SELECTED_OBJECT="Selected"
+SOBI_TPL_OVERRIDE="Template Override"
+SOBI_TPL_OVERRIDE_EXPL="You can select an individual template for this link"
+SP.SELECT_TEMPLATE_OVERRIDE="Select Template"
+
 SOBIPRO="SobiPro"
 COM_SOBIPRO="SobiPro"
 JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
-SOBI_SECTION="SobiPro Section or Category"
-SOBI_SECTION_EXPL="Add a new link to SobiPro Section or Category"
+SOBI_SECTION="SobiPro Section, Category or Entry"
+SOBI_SECTION_EXPL="Add a new link to SobiPro Section, Category or Entry"
 SOBI_SEARCH="Search Function"
 SOBI_SEARCH_EXPL="Add link to the search function of a selected section"
 SOBI_ADD_FORM="Add Entry Form"
 SOBI_ADD_FORM_EXPL="Add link to the add entry form of a selected section"
-SOBI_SELECT_SECTION="Select Section"
-SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to"
-SOBI_SELECT_CATEGORY="Select Category"
-SOBI_SELECT_CATEGORY_EXPL="You can optionally select the target category"
+SP.SOBI_SELECT_SECTION="Select Section"
+SP.SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to"
+SP.SOBI_SELECT_CATEGORY="Select Category"
+SP.SOBI_SELECT_CATEGORY_EXPL="You can optionally select the target category"
