--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,6 +15,8 @@
 ; $Author: Sigrid Suski $
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.ini $
 
+SOBI_SELECT_ENTRY="Select Entry"
+SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
 
 ;=========
 ; SobiPro 1.0.4
@@ -105,7 +107,6 @@ SP.CATEGORY.CHECKED_OUT_BY="This category is being edited by var:[user]"
 ;=========
 ; Joomla! Menu
 ;=========
-JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
 SOBI_SECTION="SobiPro Section or Category"
 SOBI_SECTION_EXPL="Add a new link to SobiPro Section or Category"
 SOBI_SEARCH="Search Function"
@@ -116,9 +117,6 @@ SOBI_SELECT_SECTION="Select Section"
 SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to"
 SOBI_SELECT_CATEGORY="Select Category"
 SOBI_SELECT_CATEGORY_EXPL="You can optionally select the target category"
-SP.JS_SELECT_CATEGORY="Select category"
-SP.JS_PLEASE_SELECT_SECTION_FIRST="Please select section first"
-SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
 SP.SELECT_CATEGORY="Select Category"
 SP.SELECT_SECTION="Select section"
 SP.SECTIONS="Sections"
