--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,9 +15,22 @@
 ; $Author: Sigrid Suski $
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.ini $
 
+SP.FM.EDIT_FIELD="Edit Field &#34;var:[field]&#34;"
+SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
+
 SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
 SP.TB.SAVE_NEW="Save as New"
+SP.TB.ACTIONS="Actions"
+SP.TB.PUBLISHING="Publishing"
+SP.TB.REQUIRED="Required"
+SP.TB.SET_REQ="Set as Required"
+SP.TB.SET_NOT_REQ="Set as not required"
+SP.TB.EDITABLE_FIELD="Editable"
+SP.TB.SET_EDITABLE="Set field to editable"
+SP.TB.SET_NOT_EDITABLE="Remove editing permissions"
+SP.TB.
+SP.TB.
 
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
