--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,8 +15,11 @@
 ; $Author: Sigrid Suski $
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.ini $
 
-SP.FM.EDIT_FIELD="Edit Field &#34;var:[field]&#34;"
 SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
+SP.FMN.FIELD_GENERAL="General Field Settings"
+SP.FMN.FIELD_ENTRYINPUT="Entry Input Settings"
+SP.FMN.FIELD_ENTRYVIEW="Entry View Settings"
+SP.FMN.FIELD_SEARCH="Search Settings"
 
 SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
