--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,6 +15,41 @@
 ; $Author: Sigrid Suski $
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.ini $
 
+SP.HEADER_ID="Id"
+SP.HEADER_FIELD_NAME="Field Name"
+SP.HEADER_FIELD_STATE="State"
+SP.HEADER_FIELD_TYPE="Field Type"
+SP.HEADER_FIELD_SHOW_IN="Show In"
+SP.HEADER_FIELD_IS_REQUIRED="Is Required"
+SP.HEADER_FIELD_IS_EDITABLE="Is Editable"
+SP.HEADER_FIELD_IS_FREE="Is Free"
+SP.HEADER_FIELD_POSITION="Position"
+SP.FMN.ORDER_BY_ID_ASC="Id - Ascending"
+SP.FMN.ORDER_BY_ID_DESC="Id - Descending"
+SP.FMN.ORDER_BY_NAME_ASC="Name - Ascending"
+SP.FMN.ORDER_BY_NAME_DESC="Name - Descending"
+SP.FMN.ORDER_BY_STATE_ASC="State - Ascending"
+SP.FMN.ORDER_BY_STATE_ASC="State - Descending"
+SP.FMN.ORDER_BY_FIELDTYPE_ASC="Fieldtype - Ascending"
+SP.FMN.ORDER_BY_FIELDTYPE_DESC="Fieldtype - Descending"
+SP.FMN.ORDER_BY_SHOWIN_ASC="Display Area"
+;SP.FMN.ORDER_BY_SHOWIN_DESC=""
+SP.FMN.ORDER_BY_REQUIRED_ASC="Required Fields First"
+SP.FMN.ORDER_BY_REQUIRED_DESC="Not Required Fields First"
+SP.FMN.ORDER_BY_EDITABLE_ASC="Editable Fields First"
+SP.FMN.ORDER_BY_EDITABLE_DESC="Non-Editable Fields First"
+SP.FMN.ORDER_BY_ISFREE_ASC="Free Fields First"
+SP.FMN.ORDER_BY_ISFREE_DESC="Non-Free Fields First"
+SP.FMN.ORDER_BY_ORDER_ASC="Position - Ascending"
+SP.FMN.ORDER_BY_ORDER_DESC="Position - Descending"
+SP.FMN_ORDER_BY="Order By"
+
+SP.
+SP.
+SP.
+SP.
+SP.
+
 SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
 SP.FMN.FIELD_GENERAL="General Field Settings"
 SP.FMN.FIELD_ENTRYINPUT="Entry Input Settings"
@@ -25,15 +60,15 @@ SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
 SP.TB.SAVE_NEW="Save as New"
 SP.TB.ACTIONS="Actions"
-SP.TB.PUBLISHING="Publishing"
+SP.TB.PUBLISHING="State"
 SP.TB.REQUIRED="Required"
 SP.TB.SET_REQ="Set as Required"
 SP.TB.SET_NOT_REQ="Set as not required"
 SP.TB.EDITABLE_FIELD="Editable"
 SP.TB.SET_EDITABLE="Set field to editable"
 SP.TB.SET_NOT_EDITABLE="Remove editing permissions"
-SP.TB.
-SP.TB.
+SP.TB.ENABLE="Enable"
+SP.TB.DISABLE="Disable"
 
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
