--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -30,16 +30,16 @@ SP.FMN.ORDER_BY_NAME_ASC="Name - Ascending"
 SP.FMN.ORDER_BY_NAME_DESC="Name - Descending"
 SP.FMN.ORDER_BY_STATE_ASC="State - Ascending"
 SP.FMN.ORDER_BY_STATE_ASC="State - Descending"
-SP.FMN.ORDER_BY_FIELDTYPE_ASC="Fieldtype - Ascending"
-SP.FMN.ORDER_BY_FIELDTYPE_DESC="Fieldtype - Descending"
-SP.FMN.ORDER_BY_SHOWIN_ASC="Display Area"
+SP.FMN.ORDER_BY_FIELDTYPE_ASC="Field Type - Ascending"
+SP.FMN.ORDER_BY_FIELDTYPE_DESC="Field Type - Descending"
+SP.FMN.ORDER_BY_SHOWIN_ASC="Availability"
 ;SP.FMN.ORDER_BY_SHOWIN_DESC=""
 SP.FMN.ORDER_BY_REQUIRED_ASC="Required Fields First"
 SP.FMN.ORDER_BY_REQUIRED_DESC="Not Required Fields First"
 SP.FMN.ORDER_BY_EDITABLE_ASC="Editable Fields First"
 SP.FMN.ORDER_BY_EDITABLE_DESC="Non-Editable Fields First"
 SP.FMN.ORDER_BY_ISFREE_ASC="Free Fields First"
-SP.FMN.ORDER_BY_ISFREE_DESC="Non-Free Fields First"
+SP.FMN.ORDER_BY_ISFREE_DESC="Paid Fields First"
 SP.FMN.ORDER_BY_ORDER_ASC="Position - Ascending"
 SP.FMN.ORDER_BY_ORDER_DESC="Position - Descending"
 SP.FMN_ORDER_BY="Order By"
@@ -52,9 +52,22 @@ SP.
 
 SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
 SP.FMN.FIELD_GENERAL="General Field Settings"
-SP.FMN.FIELD_ENTRYINPUT="Entry Input Settings"
-SP.FMN.FIELD_ENTRYVIEW="Entry View Settings"
-SP.FMN.FIELD_SEARCH="Search Settings"
+SP.FMN.FIELD_ENTRYINPUT="Entry Input Field Settings"
+SP.FMN.FIELD_ENTRYVIEW="Entry View Field Settings"
+SP.FMN.FIELD_SEARCH="Search Field Settings"
+SP.FMN.FIELD_ENTRYINPUT_PAYMENT="Payment Settings"
+SP.FMN.IS_REQUIRED="Required"
+SP.FMN.IS_EDITABLE="Editable"
+SP.FMN.IS_SEARCHABLE="Searchable"
+SP.FMN.ADM_FIELD="Administrative"
+SP.FMN.FIELD_WIDTH="Width"
+SP.FMN.FIELD_SIZE="Size"
+SP.FMN.FIELD_HEIGHT="Height"
+SP.FMN.FIELD_FEE="Fee"
+SP.FMN.FIELD_LABEL="Label"
+SP.FMN.FIELD_TYPE="Type"
+SP.FMN.AVAILABLE_IN="Availability"
+SP.FMN.HIDDEN_OPT="None"
 
 SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
@@ -852,12 +865,12 @@ SP.FM.UNIQUE_DATA="Unique Data"
 SP.FM.ADD_META_KEYS="Add to Meta Keys"
 SP.FM.ADD_META_DESC="Add to Meta Description"
 SP.FM.IS_SEARCHABLE="Is searchable"
-SP.FM.SEARCH_METHOD="Search method"
+SP.FM.SEARCH_METHOD="Search Method"
 SP.FM.CHECKBOX_GROUP_OPT="checkbox group"
 SP.FM.RADIO_BUTTONS_OPT="radio buttons"
 SP.FM.SELECT_LIST_OPT="select list"
 SP.FM.MSELECT_LIST_OPT="multiple select list"
-SP.FM.SEARCH_PRIORITY="Search priority"
+SP.FM.SEARCH_PRIORITY="Search Priority"
 SP.FM.FIELD_WIDTH="Field Width"
 SP.FM.FIELD_SIZE="Field Size"
 SP.FM.FILTER="Filter"
