--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -82,6 +82,7 @@ SP.TB.SET_EDITABLE="Set field to editable"
 SP.TB.SET_NOT_EDITABLE="Remove editing permissions"
 SP.TB.ENABLE="Enable"
 SP.TB.DISABLE="Disable"
+SP.TB.EXIT="Exit"
 
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
