new Fields Manager

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -54,8 +54,10 @@ SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
 SP.FMN.FIELD_GENERAL="General Field Settings"
 SP.FMN.FIELD_ENTRYINPUT="Entry Input Field Settings"
 SP.FMN.FIELD_ENTRYVIEW="Entry View Field Settings"
+SP.FMN.FIELD_ENTRYVIEW_META="Meta Data Settings"
 SP.FMN.FIELD_SEARCH="Search Field Settings"
 SP.FMN.FIELD_ENTRYINPUT_PAYMENT="Payment Settings"
+SP.FMN.FIELD_ENTRYINPUT_EDITS="Edit Settings"
 SP.FMN.IS_REQUIRED="Required"
 SP.FMN.IS_EDITABLE="Editable"
 SP.FMN.IS_SEARCHABLE="Searchable"
