Textarea, Toolbar, new texts

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -58,6 +58,7 @@ SP.FMN.FIELD_ENTRYVIEW_META="Meta Data Settings"
 SP.FMN.FIELD_SEARCH="Search Field Settings"
 SP.FMN.FIELD_ENTRYINPUT_PAYMENT="Payment Settings"
 SP.FMN.FIELD_ENTRYINPUT_EDITS="Edit Settings"
+SP.FMN.FIELD_ENTRYINPUT_HTML="HTML Settings"
 SP.FMN.IS_REQUIRED="Required"
 SP.FMN.IS_EDITABLE="Editable"
 SP.FMN.IS_SEARCHABLE="Searchable"
@@ -70,6 +71,7 @@ SP.FMN.FIELD_LABEL="Label"
 SP.FMN.FIELD_TYPE="Type"
 SP.FMN.AVAILABLE_IN="Availability"
 SP.FMN.HIDDEN_OPT="None"
+SP.FMN.LENGTH_CHAR="chars"
 
 SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
@@ -850,7 +852,7 @@ SP.FM.EDIT_LIMITS="Edit Limits"
 SP.FM.FIELD_TYPE="Field Type"
 SP.FM.PAYMENT="Payment"
 SP.FM.FOR_FREE="For Free"
-SP.FM.TXT.ALLOW_HTML="Allow HTML code"
+SP.FM.TXT.ALLOW_HTML="Allow HTML Code"
 SP.FM.SUFFIX="Suffix"
 SP.FM.SEARCH_RANGE_SETTINGS="Range Search Values"
 SP.FM.RANGE_LIST_OPT="range search"
@@ -940,7 +942,7 @@ SP.FM.TXT.PARSE_CONTENT="Parse Content"
 SP.FM.TXT.ALLOWED_TAGS="Allowed Tags"
 SP.FM.TXT.ALLOW_HTML_NO="No"
 SP.FM.TXT.ALLOW_HTML_YES="Yes, but filter input"
-SP.FM.TXT.ALLOW_HTML_RAW="Yes and do not filter"
+SP.FM.TXT.ALLOW_HTML_RAW="Yes, and do not filter"
 SP.FM.TXT.ALLOWED_ATTR="Allowed Attributes"
 SP.FM.URL.OWN_TITLE="Allow Adding own Title"
 SP.FM.URL.LABEL_FOR_TITLE="Label for Title"
