--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -44,6 +44,19 @@ SP.FMN.ORDER_BY_ORDER_ASC="Position - Ascending"
 SP.FMN.ORDER_BY_ORDER_DESC="Position - Descending"
 SP.FMN_ORDER_BY="Order By"
 
+SP.EMN_ORDER_BY="Order By"
+SP.EMN.ORDER_BY_ID_ASC="Id - Ascending"
+SP.EMN.ORDER_BY_ID_DESC="Id - Descending"
+SP.EMN.ORDER_BY_NAME_ASC="Name - Ascending"
+SP.EMN.ORDER_BY_NAME_DESC="Name - Descending"
+SP.EMN.ORDER_BY_STATE_ASC="State - Ascending"
+SP.EMN.ORDER_BY_STATE_DESC="State - Descending"
+SP.EMN.ORDER_BY_APPROVAL_ASC="Approval - Ascending"
+SP.EMN.ORDER_BY_APPROVAL_DESC="Approval - Descending"
+SP.EMN.ORDER_BY_ORDER_ASC="Position - Ascending"
+SP.EMN.ORDER_BY_ORDER_DESC="Position - Descending"
+SP.EMN.ORDER_BY_FIELD="By Field"
+
 SP.
 SP.
 SP.
@@ -87,6 +100,9 @@ SP.TB.SET_NOT_EDITABLE="Remove editing permissions"
 SP.TB.ENABLE="Enable"
 SP.TB.DISABLE="Disable"
 SP.TB.EXIT="Exit"
+SP.TB.APPROVAL="Approval"
+SP.TB.REVOKE="Revoke"
+SP.TB.APPROVE="Grant"
 
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
