all entries in section

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -26,6 +26,13 @@
    (!) - Change
 ===================================================
 
+
+-------------------
+1.0.8 (28 April 2012)
+-------------------
+
+   (!) SPHeader::addMeta() takes now optional list of custom parameters as an array
+
 -------------------
 1.0.8 (28 April 2012)
 -------------------
