--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -57,11 +57,11 @@ SP.EMN.ORDER_BY_ORDER_ASC="Position - Ascending"
 SP.EMN.ORDER_BY_ORDER_DESC="Position - Descending"
 SP.EMN.ORDER_BY_FIELD="By Field"
 
-SP.
-SP.
-SP.
-SP.
-SP.
+SP.HEADER_ENTRIES_NAME="Name"
+SP.HEADER_ENTRIES_STATE="State"
+SP.HEADER_ENTRIES_APPROVAL="Approval"
+SP.HEADER_FIELD_AUTHOR="Author"
+SP.EMN_FILTER="Filter"
 
 SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
 SP.FMN.FIELD_GENERAL="General Field Settings"
