--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -56,6 +56,7 @@ SP.EMN.ORDER_BY_APPROVAL_DESC="Approval - Descending"
 SP.EMN.ORDER_BY_ORDER_ASC="Position - Ascending"
 SP.EMN.ORDER_BY_ORDER_DESC="Position - Descending"
 SP.EMN.ORDER_BY_FIELD="By Field"
+SP.EMN.ORDER_BY_OWNER="Owner (group by)"
 
 SP.HEADER_ENTRIES_NAME="Name"
 SP.HEADER_ENTRIES_STATE="State"
