all entries in section

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -62,7 +62,7 @@ SP.HEADER_ENTRIES_NAME="Name"
 SP.HEADER_ENTRIES_STATE="State"
 SP.HEADER_ENTRIES_APPROVAL="Approval"
 SP.HEADER_FIELD_AUTHOR="Author"
-SP.EMN_FILTER="Filter"
+SP.EMN_FILTER="Filter..."
 
 SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
 SP.FMN.FIELD_GENERAL="General Field Settings"
@@ -104,6 +104,8 @@ SP.TB.EXIT="Exit"
 SP.TB.APPROVAL="Approval"
 SP.TB.REVOKE="Revoke"
 SP.TB.APPROVE="Grant"
+SP.TB.ENTRY="Entry"
+SP.TB.CATEGORY="Category"
 
 SOBI_SELECT_ENTRY="Select Entry"
 SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to link to"
