--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -85,7 +85,10 @@ SP.FMN.FIELD_LABEL="Label"
 SP.FMN.FIELD_TYPE="Type"
 SP.FMN.AVAILABLE_IN="Availability"
 SP.FMN.HIDDEN_OPT="None"
+SP.FMN.SEL.WIDTH_IN_SEARCH="Width"
+SP.FMN.SEL.SIZE_IN_SEARCH="Size"
 SP.FMN.LENGTH_CHAR="chars"
+SP.FMN.LENGTH_ROWS="rows"
 
 SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
