--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -66,6 +66,10 @@ SP.EMN_FILTER="Filter..."
 
 SP.FM.ADD_FIELD="Add New &#34;var:[field_type]&#34; Field"
 SP.FMN.FIELD_GENERAL="General Field Settings"
+SP.FMN.FIELD_GENERAL_URL="URL Settings"
+SP.FMN.FIELD_GENERAL_EMAIL="Email Settings"
+SP.FMN.FIELD_ENTRYINPUT_IMAGE="Image Settings"
+SP.FMN.FIELD_ENTRYINPUT_THUMB="Thumbnail Settings"
 SP.FMN.FIELD_ENTRYINPUT="Entry Input Field Settings"
 SP.FMN.FIELD_ENTRYVIEW="Entry View Field Settings"
 SP.FMN.FIELD_ENTRYVIEW_META="Meta Data Settings"
@@ -73,6 +77,7 @@ SP.FMN.FIELD_SEARCH="Search Field Settings"
 SP.FMN.FIELD_ENTRYINPUT_PAYMENT="Payment Settings"
 SP.FMN.FIELD_ENTRYINPUT_EDITS="Edit Settings"
 SP.FMN.FIELD_ENTRYINPUT_HTML="HTML Settings"
+SP.FMN.FIELD_ENTRYINPUT_URLTITLE="Title Settings"
 SP.FMN.IS_REQUIRED="Required"
 SP.FMN.IS_EDITABLE="Editable"
 SP.FMN.IS_SEARCHABLE="Searchable"
@@ -87,8 +92,30 @@ SP.FMN.AVAILABLE_IN="Availability"
 SP.FMN.HIDDEN_OPT="None"
 SP.FMN.SEL.WIDTH_IN_SEARCH="Width"
 SP.FMN.SEL.SIZE_IN_SEARCH="Size"
+SP.FMN.EMAIL.OWN_TITLE="Custom Title"
+SP.FMN.EMAIL.LABEL_TITLE="Label"
+SP.FMN.EMAIL.TITLE_FIELD_WIDTH="Width"
+SP.FMN.EMAIL.TITLE_MAX_LENGTH="max. Length"
+SP.FMN.EMAIL.TITLE_FILTER="Filter"
+SP.FMN.EMAIL.BOTS_PROTECT="Bots Protection"
+SP.FMN.URL.OWN_TITLE="Custom Title"
+SP.FMN.URL.LABEL_TITLE="Label"
+SP.FMN.URL.TITLE_FIELD_WIDTH="Width"
+SP.FMN.URL.TITLE_MAX_LENGTH="max. Length"
+SP.FMN.URL.TITLE_FILTER="Filter"
+SP.FMN.URL.VALIDATE_URL="Validate (CURL required)"
+SP.FMN.URL.ALLOWED_PROTO="Protocols"
+SP.FMN.RADIO.DEFSEL="Default Option"
+SP.FMN.IMG.MAX_FILE_SIZE="max. File Size"
+SP.FMN.IMG.IMAGE_SAVE_PATH="Path"
+SP.FMN.IMG.KEEP_ORG="Keep Original Image"
+SP.FM.IMG.RESIZEHEIGHT_TO="Resize Height to"
+SP.FM.IMG.RESIZEWIDTH_TO="Resize Width to"
+
+
 SP.FMN.LENGTH_CHAR="chars"
 SP.FMN.LENGTH_ROWS="rows"
+SP.FMN.LENGTH_BYTES="bytes"
 
 SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
@@ -974,7 +1001,7 @@ SP.FM.URL.TITLE FILTER="Title Filter"
 SP.FM.URL.URL_FIELD_WIDTH="URL Field Width"
 SP.FM.URL.URL_MAX_LENGTH="URL max. Length"
 SP.FM.URL.UNIQUE_DATA="Unique Data"
-SP.FM.URL.VALIDATE_URL="Validate URL ( CURL required )"
+SP.FM.URL.VALIDATE_URL="Validate URL (CURL required)"
 SP.FM.URL.ALLOWED_PROTO="Allowed Protocols"
 SP.FM.URL.NEW_WINDOW="Open in new Window"
 SP.FM.UPLOAD_OPT_FILE="Upload an INI Definition File"
