all entries in section

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -37,6 +37,8 @@
    (!) SPHeader::addMeta() takes now optional list of custom parameters as an array
    (!) SPLang::nid using JFilterOutput::stringURLSafe now
 
+   (#) {entry.url} placeholder doesn't work (Issue #708 )
+
 -------------------
 1.0.8 (28 April 2012)
 -------------------
