all entries in section

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -15,6 +15,11 @@
 ; $Author: Sigrid Suski $
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/adm/en-GB.com_sobipro.ini $
 
+; New
+
+; changed
+SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option IDs duplicated - random option ID has been generated"
+
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
 SP.HEADER_FIELD_STATE="State"
@@ -43,6 +48,7 @@ SP.FMN.ORDER_BY_ISFREE_DESC="Paid Fields First"
 SP.FMN.ORDER_BY_ORDER_ASC="Position - Ascending"
 SP.FMN.ORDER_BY_ORDER_DESC="Position - Descending"
 SP.FMN_ORDER_BY="Order By"
+SP.FMN.OPTIONS="Options"
 
 SP.EMN_ORDER_BY="Order By"
 SP.EMN.ORDER_BY_ID_ASC="Id - Ascending"
@@ -1100,4 +1106,4 @@ SP.MSG.OBJ_SAVED="var:[type] has been saved"
 SP.MSG.OBJ_CLONED="var:[type] has been duplicated. You are currently editing the duplicated var:[type]"
 SP.MSG.HELP_ADD_CORE_REPO="You must add the SobiPro Core repository to access the documentation"
 SP.MSG.CONFIG_SAVED="Configuration has been saved"
-SP.FIELD_WARN_DUPLICATE_OPT_ID="Option ID has been duplicated - random option ID has been generated"
+
