all entries in section

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,6 +20,8 @@
 ; changed
 SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option IDs duplicated - random option ID has been generated"
 
+SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields"
+
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
 SP.HEADER_FIELD_STATE="State"
