--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -26,9 +26,9 @@ SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
 SP.HEADER_FIELD_STATE="State"
 SP.HEADER_FIELD_TYPE="Field Type"
-SP.HEADER_FIELD_SHOW_IN="Show In"
-SP.HEADER_FIELD_IS_REQUIRED="Is Required"
-SP.HEADER_FIELD_IS_EDITABLE="Is Editable"
+SP.HEADER_FIELD_SHOW_IN="Availability"
+SP.HEADER_FIELD_IS_REQUIRED="Required"
+SP.HEADER_FIELD_IS_EDITABLE="Editable"
 SP.HEADER_FIELD_IS_FREE="Is Free"
 SP.HEADER_FIELD_POSITION="Position"
 SP.FMN.ORDER_BY_ID_ASC="Id - Ascending"
@@ -119,6 +119,17 @@ SP.FMN.IMG.IMAGE_SAVE_PATH="Path"
 SP.FMN.IMG.KEEP_ORG="Keep Original Image"
 SP.FM.IMG.RESIZEHEIGHT_TO="Resize Height to"
 SP.FM.IMG.RESIZEWIDTH_TO="Resize Width to"
+
+SP.FMN.CC_TREE="SigsiuTree"
+SP.FMN.CC_SELECT_LIST="Single Select List"
+SP.FMN.CC_MSELECT="Multiple Select List"
+SP.FMN.CC_FIXED="Fixed Choice"
+SP.FMN.CC_METHOD="Select Input Method"
+SP.FMN.CC_ALLOW_CATS_WITH_CHILDS="Allow Choosing Parent Cats"
+SP.FMN.CC_FIXED_CID="Enter Category ID"
+SP.FMN.CC_TREE_MODAL="Output"
+SP.FMN.CC_MODAL_YES="Modal Window"
+SP.FMN.CC_MODAL_NO="Inline"
 
 
 SP.FMN.LENGTH_CHAR="chars"
