--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -130,6 +130,8 @@ SP.FMN.CC_FIXED_CID="Enter Category ID"
 SP.FMN.CC_TREE_MODAL="Output"
 SP.FMN.CC_MODAL_YES="Modal Window"
 SP.FMN.CC_MODAL_NO="Inline"
+SP.FMN.CC_CATS_LIMIT="Allow adding up to"
+SP.FMN.CC_CATS_LIMIT_SUFFIX="categories"
 
 
 SP.FMN.LENGTH_CHAR="chars"
