Icons im Fields Manager, Fields Manager Übersichtsfenster

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -25,30 +25,30 @@ SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields"
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
 SP.HEADER_FIELD_STATE="State"
-SP.HEADER_FIELD_TYPE="Field Type"
+SP.HEADER_FIELD_TYPE="Type"
 SP.HEADER_FIELD_SHOW_IN="Availability"
 SP.HEADER_FIELD_IS_REQUIRED="Required"
 SP.HEADER_FIELD_IS_EDITABLE="Editable"
-SP.HEADER_FIELD_IS_FREE="Is Free"
+SP.HEADER_FIELD_IS_FREE="For Free"
 SP.HEADER_FIELD_POSITION="Position"
-SP.FMN.ORDER_BY_ID_ASC="Id - Ascending"
-SP.FMN.ORDER_BY_ID_DESC="Id - Descending"
-SP.FMN.ORDER_BY_NAME_ASC="Name - Ascending"
-SP.FMN.ORDER_BY_NAME_DESC="Name - Descending"
-SP.FMN.ORDER_BY_STATE_ASC="State - Ascending"
-SP.FMN.ORDER_BY_STATE_ASC="State - Descending"
-SP.FMN.ORDER_BY_FIELDTYPE_ASC="Field Type - Ascending"
-SP.FMN.ORDER_BY_FIELDTYPE_DESC="Field Type - Descending"
+SP.FMN.ORDER_BY_ID_ASC="Id ascending"
+SP.FMN.ORDER_BY_ID_DESC="Id descending"
+SP.FMN.ORDER_BY_NAME_ASC="Name ascending"
+SP.FMN.ORDER_BY_NAME_DESC="Name descending"
+SP.FMN.ORDER_BY_STATE_DESC="Enabled first"
+SP.FMN.ORDER_BY_STATE_ASC="Disabled first"
+SP.FMN.ORDER_BY_FIELDTYPE_ASC="Type ascending"
+SP.FMN.ORDER_BY_FIELDTYPE_DESC="Type descending"
 SP.FMN.ORDER_BY_SHOWIN_ASC="Availability"
 ;SP.FMN.ORDER_BY_SHOWIN_DESC=""
-SP.FMN.ORDER_BY_REQUIRED_ASC="Required Fields First"
-SP.FMN.ORDER_BY_REQUIRED_DESC="Not Required Fields First"
-SP.FMN.ORDER_BY_EDITABLE_ASC="Editable Fields First"
-SP.FMN.ORDER_BY_EDITABLE_DESC="Non-Editable Fields First"
-SP.FMN.ORDER_BY_ISFREE_ASC="Free Fields First"
-SP.FMN.ORDER_BY_ISFREE_DESC="Paid Fields First"
-SP.FMN.ORDER_BY_ORDER_ASC="Position - Ascending"
-SP.FMN.ORDER_BY_ORDER_DESC="Position - Descending"
+SP.FMN.ORDER_BY_REQUIRED_DESC="Required first"
+SP.FMN.ORDER_BY_REQUIRED_ASC="not Required first"
+SP.FMN.ORDER_BY_EDITABLE_ASC="Non-editable first"
+SP.FMN.ORDER_BY_EDITABLE_DESC="Editable first"
+SP.FMN.ORDER_BY_ISFREE_ASC="Free of charge first"
+SP.FMN.ORDER_BY_ISFREE_DESC="Paid first"
+SP.FMN.ORDER_BY_ORDER_ASC="Position ascending"
+SP.FMN.ORDER_BY_ORDER_DESC="Position descending"
 SP.FMN_ORDER_BY="Order By"
 SP.FMN.OPTIONS="Options"
 
@@ -143,6 +143,7 @@ SP.TB.SAVE_EXIT="Save &amp; Exit"
 SP.TB.SAVE_NEW="Save as New"
 SP.TB.ACTIONS="Actions"
 SP.TB.PUBLISHING="State"
+SP.TB.ENABLED="State"
 SP.TB.REQUIRED="Required"
 SP.TB.SET_REQ="Set as Required"
 SP.TB.SET_NOT_REQ="Set as not required"
