--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -33,6 +33,7 @@
 
    (+) XML based template engine for administrator templates
    (+) Possibility to override administrator templates for particular section
+   (+) Definition file for Radio Button field
 
    (!) SPHeader::addMeta() takes now optional list of custom parameters as an array
    (!) SPLang::nid using JFilterOutput::stringURLSafe now
