--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -126,7 +126,7 @@ SP.FMN.CC_MSELECT="Multiple Select List"
 SP.FMN.CC_FIXED="Fixed Choice"
 SP.FMN.CC_METHOD="Select Input Method"
 SP.FMN.CC_ALLOW_CATS_WITH_CHILDS="Allow Choosing Parent Cats"
-SP.FMN.CC_FIXED_CID="Enter Category ID"
+SP.FMN.CC_FIXED_CID="Category Id"
 SP.FMN.CC_TREE_MODAL="Output"
 SP.FMN.CC_MODAL_YES="Modal Window"
 SP.FMN.CC_MODAL_NO="Inline"
