--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -132,7 +132,7 @@ SP.FMN.CC_MODAL_YES="Modal Window"
 SP.FMN.CC_MODAL_NO="Inline"
 SP.FMN.CC_CATS_LIMIT="Allow adding up to"
 SP.FMN.CC_CATS_LIMIT_SUFFIX="categories"
-
+SP.FMN.CC_IS_PRIMARY="Primary Category Selector"
 
 SP.FMN.LENGTH_CHAR="chars"
 SP.FMN.LENGTH_ROWS="rows"
