--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -58,3 +58,4 @@ SP.JS_FM_TEXTAREA_WYSIWYG_NOLIMIT_WARN2="You cannot limit the length of a textar
 SP.JS_PBY_NO="Please don't forget to donate! :)"
 SP.JS_CHECKING_FOR_UPDATES="Please wait, checking for updates ..."
 SP.JS_NO_REPO="Please add the URL of a repository first"
+SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories"
