--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
@@ -24,3 +24,4 @@ SP.JS_PLEASE_SELECT_CATEGORY_YOU_WANT_TO_ADD_IN_THE_TREE_FIRST="Please select th
 SP.JS_THIS_CATEGORY_HAS_BEEN_ALREADY_ADDED="This category has already been added."
 SP.JS_SELECT_CATEGORIES="Select categories"
 SP.JS_FD_TEXTAREA_LIMIT="You can input a maximum of var:[max_length] chars into this field."
+SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories"
