category chooser fields - missing only Stree

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -133,6 +133,7 @@ SP.FMN.CC_MODAL_NO="Inline"
 SP.FMN.CC_CATS_LIMIT="Allow adding up to"
 SP.FMN.CC_CATS_LIMIT_SUFFIX="categories"
 SP.FMN.CC_IS_PRIMARY="Primary Category Selector"
+SP.FMN.CC_SEARCH_METHOD="Search Method"
 
 SP.FMN.LENGTH_CHAR="chars"
 SP.FMN.LENGTH_ROWS="rows"
