--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -16,6 +16,8 @@
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/site/en-GB.com_sobipro.ini $
 
 
+SP.FMN.CC_SEARCH_SELECT_CAT="Select Category"
+
 ;=========
 ; SobiPro 1.0.7
 ;=========
