(+) Field controller implements now a proxy pattern to the field type

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,8 +19,13 @@
 
 ; changed
 SP.FIELD_WARN_DUPLICATE_OPT_ID="Some option IDs duplicated - random option ID has been generated"
-
 SP.PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields"
+SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
+SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
+SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
+
+
+SP.SECTION_LIST_TITLE="Section: var:[section_name]"
 
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
@@ -65,6 +70,17 @@ SP.EMN.ORDER_BY_ORDER_ASC="Position - Ascending"
 SP.EMN.ORDER_BY_ORDER_DESC="Position - Descending"
 SP.EMN.ORDER_BY_FIELD="By Field"
 SP.EMN.ORDER_BY_OWNER="Owner (group by)"
+
+
+SP.CATN.ORDER_BY_OWNER="Owner (group by)"
+SP.CATN.ORDER_BY_NAME_ASC="Name Ascending"
+SP.CATN.ORDER_BY_NAME_DESC="Name Descending"
+SP.CATN.ORDER_BY_STATE_ASC="State Ascending"
+SP.CATN.ORDER_BY_STATE_DESC="State Descending"
+SP.CATN.ORDER_BY_APPR_ASC="Approval Ascending"
+SP.CATN.ORDER_BY_APPR_DESC="Approval Descending"
+SP.CATN.ORDER_BY_ORDER_ASC="Ordering Ascending"
+SP.CATN.ORDER_BY_ORDER_DESC="Ordering Descending"
 
 SP.HEADER_ENTRIES_NAME="Name"
 SP.HEADER_ENTRIES_STATE="State"
@@ -396,9 +412,6 @@ SP.CAT.RESET_COUNT="Reset"
 SP.CAT.SHOW_ICON="Show Icon"
 SP.CAT.SHOW_INTROTEXT="Show Introtext"
 SP.CAT.PARSE_CAT_DES="Parse Category Description"
-SP.CATEGORY_LIST_TITLE="Category: var:[category]"
-SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category]</small>"
-SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category]</small>"
 SP.CAT.STATE_CHANGED="The state of selected category has been changed"
 SP.CATEGORY.HEADER_TOGGLE="Toggle selected categories"
 SP.CATEGORY.HEADER_C_SID="ID"
