(+) Field controller implements now a proxy pattern to the field type

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -71,6 +71,12 @@ SP.EMN.ORDER_BY_ORDER_DESC="Position - Descending"
 SP.EMN.ORDER_BY_FIELD="By Field"
 SP.EMN.ORDER_BY_OWNER="Owner (group by)"
 
+SP.HEADER_CATS_NAME="Category Name"
+SP.HEADER_CATS_STATE="State"
+SP.HEADER_CATS_APPROVAL="Approval"
+SP.HEADER_CATS_AUTHOR="Author"
+SP.HEADER_CATS_POSITION="Position"
+SP.
 
 SP.CATN.ORDER_BY_OWNER="Owner (group by)"
 SP.CATN.ORDER_BY_NAME_ASC="Name Ascending"
