--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -47,27 +47,28 @@ SP.FMN.ORDER_BY_FIELDTYPE_DESC="Type descending"
 SP.FMN.ORDER_BY_SHOWIN_ASC="Availability"
 ;SP.FMN.ORDER_BY_SHOWIN_DESC=""
 SP.FMN.ORDER_BY_REQUIRED_DESC="Required first"
-SP.FMN.ORDER_BY_REQUIRED_ASC="not Required first"
+SP.FMN.ORDER_BY_REQUIRED_ASC="Not Required first"
 SP.FMN.ORDER_BY_EDITABLE_ASC="Non-editable first"
 SP.FMN.ORDER_BY_EDITABLE_DESC="Editable first"
 SP.FMN.ORDER_BY_ISFREE_ASC="Free of charge first"
 SP.FMN.ORDER_BY_ISFREE_DESC="Paid first"
 SP.FMN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.FMN.ORDER_BY_ORDER_DESC="Position descending"
-SP.FMN_ORDER_BY="Order By"
+SP.FMN_ORDER_BY="Order by"
 SP.FMN.OPTIONS="Options"
+SP.FMN.STATE_CHANGE_NO_ID="Please select field first"
 
-SP.EMN_ORDER_BY="Order By"
-SP.EMN.ORDER_BY_ID_ASC="Id - Ascending"
-SP.EMN.ORDER_BY_ID_DESC="Id - Descending"
-SP.EMN.ORDER_BY_NAME_ASC="Name - Ascending"
-SP.EMN.ORDER_BY_NAME_DESC="Name - Descending"
-SP.EMN.ORDER_BY_STATE_ASC="State - Ascending"
-SP.EMN.ORDER_BY_STATE_DESC="State - Descending"
-SP.EMN.ORDER_BY_APPROVAL_ASC="Approval - Ascending"
-SP.EMN.ORDER_BY_APPROVAL_DESC="Approval - Descending"
-SP.EMN.ORDER_BY_ORDER_ASC="Position - Ascending"
-SP.EMN.ORDER_BY_ORDER_DESC="Position - Descending"
+SP.EMN_ORDER_BY="Order by"
+SP.EMN.ORDER_BY_ID_ASC="Id ascending"
+SP.EMN.ORDER_BY_ID_DESC="Id descending"
+SP.EMN.ORDER_BY_NAME_ASC="Name ascending"
+SP.EMN.ORDER_BY_NAME_DESC="Name descending"
+SP.EMN.ORDER_BY_STATE_ASC="State ascending"
+SP.EMN.ORDER_BY_STATE_DESC="State descending"
+SP.EMN.ORDER_BY_APPROVAL_ASC="Approval ascending"
+SP.EMN.ORDER_BY_APPROVAL_DESC="Approval descending"
+SP.EMN.ORDER_BY_ORDER_ASC="Position ascending"
+SP.EMN.ORDER_BY_ORDER_DESC="Position descending"
 SP.EMN.ORDER_BY_FIELD="By Field"
 SP.EMN.ORDER_BY_OWNER="Owner (group by)"
 
@@ -79,14 +80,14 @@ SP.HEADER_CATS_POSITION="Position"
 SP.
 
 SP.CATN.ORDER_BY_OWNER="Owner (group by)"
-SP.CATN.ORDER_BY_NAME_ASC="Name Ascending"
-SP.CATN.ORDER_BY_NAME_DESC="Name Descending"
-SP.CATN.ORDER_BY_STATE_ASC="State Ascending"
-SP.CATN.ORDER_BY_STATE_DESC="State Descending"
-SP.CATN.ORDER_BY_APPR_ASC="Approval Ascending"
-SP.CATN.ORDER_BY_APPR_DESC="Approval Descending"
-SP.CATN.ORDER_BY_ORDER_ASC="Ordering Ascending"
-SP.CATN.ORDER_BY_ORDER_DESC="Ordering Descending"
+SP.CATN.ORDER_BY_NAME_ASC="Name ascending"
+SP.CATN.ORDER_BY_NAME_DESC="Name descending"
+SP.CATN.ORDER_BY_STATE_ASC="State ascending"
+SP.CATN.ORDER_BY_STATE_DESC="State descending"
+SP.CATN.ORDER_BY_APPR_ASC="Approval ascending"
+SP.CATN.ORDER_BY_APPR_DESC="Approval descending"
+SP.CATN.ORDER_BY_ORDER_ASC="Ordering descending"
+SP.CATN.ORDER_BY_ORDER_DESC="Ordering descending"
 
 SP.HEADER_ENTRIES_NAME="Name"
 SP.HEADER_ENTRIES_STATE="State"
@@ -141,18 +142,19 @@ SP.FMN.IMG.IMAGE_SAVE_PATH="Path"
 SP.FMN.IMG.KEEP_ORG="Keep Original Image"
 SP.FM.IMG.RESIZEHEIGHT_TO="Resize Height to"
 SP.FM.IMG.RESIZEWIDTH_TO="Resize Width to"
+SP.FMN.SELECT_LIST_OPT="Single Select List"
 
 SP.FMN.CC_TREE="SigsiuTree"
 SP.FMN.CC_SELECT_LIST="Single Select List"
 SP.FMN.CC_MSELECT="Multiple Select List"
 SP.FMN.CC_FIXED="Fixed Choice"
-SP.FMN.CC_METHOD="Select Input Method"
-SP.FMN.CC_ALLOW_CATS_WITH_CHILDS="Allow Choosing Parent Cats"
+SP.FMN.CC_METHOD="Method"
+SP.FMN.CC_ALLOW_CATS_WITH_CHILDS="Parent Category selectable"
 SP.FMN.CC_FIXED_CID="Category Id"
-SP.FMN.CC_TREE_MODAL="Output"
+SP.FMN.CC_TREE_MODAL="Output Style"
 SP.FMN.CC_MODAL_YES="Modal Window"
 SP.FMN.CC_MODAL_NO="Inline"
-SP.FMN.CC_CATS_LIMIT="Allow adding up to"
+SP.FMN.CC_CATS_LIMIT="max. Categories per Entry"
 SP.FMN.CC_CATS_LIMIT_SUFFIX="categories"
 SP.FMN.CC_IS_PRIMARY="Primary Category Selector"
 SP.FMN.CC_SEARCH_METHOD="Search Method"
@@ -188,8 +190,7 @@ SOBI_SELECT_ENTRY_EXPL="Or you can select an entry to which you would like to li
 ;=========
 ; SobiPro 1.0.4
 ;=========
-; modified, please delete old version
-SP.FM.GENERAL_SEARCH_OPT="via input field only"
+SP.FM.GENERAL_SEARCH_OPT="via Input Field only"
 
 ;=========
 ; SobiPro 1.0.1
@@ -946,7 +947,7 @@ SP.FM.FOR_FREE="For Free"
 SP.FM.TXT.ALLOW_HTML="Allow HTML Code"
 SP.FM.SUFFIX="Suffix"
 SP.FM.SEARCH_RANGE_SETTINGS="Range Search Values"
-SP.FM.RANGE_LIST_OPT="range search"
+SP.FM.RANGE_LIST_OPT="Range Search"
 SP.FM.FIELD_FEE="Field Fee"
 SP.FM.FIELD_LABEL="Field Label"
 SP.FM.ALIAS="Alias"
@@ -962,10 +963,11 @@ SP.FM.ADD_META_KEYS="Add to Meta Keys"
 SP.FM.ADD_META_DESC="Add to Meta Description"
 SP.FM.IS_SEARCHABLE="Is searchable"
 SP.FM.SEARCH_METHOD="Search Method"
-SP.FM.CHECKBOX_GROUP_OPT="checkbox group"
-SP.FM.RADIO_BUTTONS_OPT="radio buttons"
+SP.FM.SELECT_LIST_OPT="Single Select List"
+SP.FM.CHECKBOX_GROUP_OPT="Checkbox Group"
+SP.FM.RADIO_BUTTONS_OPT="Radio Buttons"
+SP.FM.MSELECT_LIST_OPT="Multiple Select List"
 SP.FM.SELECT_LIST_OPT="select list"
-SP.FM.MSELECT_LIST_OPT="multiple select list"
 SP.FM.SEARCH_PRIORITY="Search Priority"
 SP.FM.FIELD_WIDTH="Field Width"
 SP.FM.FIELD_SIZE="Field Size"
