JavaScript - focus set back on error

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -16,6 +16,8 @@
 ; $HeadURL: https://svn.suski.eu/SobiPro/Component/trunk/Site/usr/locale/site/en-GB.com_sobipro.err.ini $
 
 
+SP.FIELD_CC_FIXED_CID_NOT_SELECTED="Category chooser: method set to fixed id but no category id has been selected"
+
 ;=========
 ; SobiPro 1.0.1
 ;=========
