JavaScript - focus set back on error

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -25,7 +25,13 @@ SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 
 
+SP.CAT.CATEGORY_GENERAL_SETTINGS="General Settings"
+SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category_name]&#34;"
 SP.SECTION_LIST_TITLE="Section: var:[section_name]"
+SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
+SP.CAT.CATEGORY_SAVE_SELECTION="Save Selection"
+SP.CAT.SELECT_PARENT_BUTTON="Select Parent Category"
+SP.CAT.CATEGORY_DESCRIPTION="Description"
 
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
@@ -403,7 +409,7 @@ SP.PERMISSIONS.PUBLISH_*="Publish Any"
 ;=========
 ; Category
 ;=========
-SP.EDIT_CATEGORY="Edit Category &#34;var:[category]&#34;"
+;SP.EDIT_CATEGORY="Edit Category &#34;var:[category]&#34;"
 SP.ADD_NEW_CATEGORY="Add New Category"
 SP.JS_SELECT_PARENT_ENTRY="Select Parent Entry"
 SP.CAT.CATEGORY_NAME="Category Name"
