--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -32,6 +32,7 @@ SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
 SP.CAT.CATEGORY_SAVE_SELECTION="Save Selection"
 SP.CAT.SELECT_PARENT_BUTTON="Select Parent Category"
 SP.CAT.CATEGORY_DESCRIPTION="Description"
+SP.CAT.CATEGORY_PUBLISHING="Publishing"
 
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
