--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -17,6 +17,12 @@
 
 
 SP.FMN.CC_SEARCH_SELECT_CAT="Select Category"
+SP.JS_CALENDAR_MONTHS="January, February, March, April, May, June, July, August, September, October, November, December"
+SP.JS_CALENDAR_MONTHS_SHORT="Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec"
+SP.JS_CALENDAR_DAYS="Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Saturday, Sunday"
+SP.JS_CALENDAR_DAYS_SHORT="Sun, Mon, Tue, Wed, Thu, Fri, Sat, Sun"
+SP.JS_CALENDAR_DAYS_MINI="Su, Mo, Tu, We, Th, Fr, Sa, Su"
+SP.JS_CALENDAR_TODAY="Today"
 
 ;=========
 ; SobiPro 1.0.7
