revise of all entries screen

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -70,14 +70,20 @@ SP.EMN.ORDER_BY_ID_ASC="Id ascending"
 SP.EMN.ORDER_BY_ID_DESC="Id descending"
 SP.EMN.ORDER_BY_NAME_ASC="Name ascending"
 SP.EMN.ORDER_BY_NAME_DESC="Name descending"
-SP.EMN.ORDER_BY_STATE_ASC="State ascending"
-SP.EMN.ORDER_BY_STATE_DESC="State descending"
-SP.EMN.ORDER_BY_APPROVAL_ASC="Approval ascending"
-SP.EMN.ORDER_BY_APPROVAL_DESC="Approval descending"
+SP.EMN.ORDER_BY_STATE_ASC="Unpublished state first"
+SP.EMN.ORDER_BY_STATE_DESC="Published state first"
+SP.EMN.ORDER_BY_APPROVAL_ASC="Not approved first"
+SP.EMN.ORDER_BY_APPROVAL_DESC="Approved first"
 SP.EMN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.EMN.ORDER_BY_ORDER_DESC="Position descending"
 SP.EMN.ORDER_BY_FIELD="By Field"
 SP.EMN.ORDER_BY_OWNER="Owner (group by)"
+
+SP.EMN.APPROVED="Approval has been granted."
+SP.EMN.UNAPPROVED="Approval has been revoked."
+SP.EN.PUBLISHED="Entry has been published."
+SP.EN.UNPUBLISHED="Entry has been unpublished."
+SP.EMN.REORDERED="Entries are re-ordered now."
 
 SP.HEADER_CATS_NAME="Category Name"
 SP.HEADER_CATS_STATE="State"
@@ -89,12 +95,12 @@ SP.
 SP.CATN.ORDER_BY_OWNER="Owner (group by)"
 SP.CATN.ORDER_BY_NAME_ASC="Name ascending"
 SP.CATN.ORDER_BY_NAME_DESC="Name descending"
-SP.CATN.ORDER_BY_STATE_ASC="State ascending"
-SP.CATN.ORDER_BY_STATE_DESC="State descending"
-SP.CATN.ORDER_BY_APPR_ASC="Approval ascending"
-SP.CATN.ORDER_BY_APPR_DESC="Approval descending"
-SP.CATN.ORDER_BY_ORDER_ASC="Ordering descending"
-SP.CATN.ORDER_BY_ORDER_DESC="Ordering descending"
+SP.CATN.ORDER_BY_STATE_ASC="Unpublished state first"
+SP.CATN.ORDER_BY_STATE_DESC="Published state first"
+SP.CATN.ORDER_BY_APPR_ASC="Not approved first"
+SP.CATN.ORDER_BY_APPR_DESC="Approved first"
+SP.CATN.ORDER_BY_ORDER_ASC="Position descending"
+SP.CATN.ORDER_BY_ORDER_DESC="Position descending"
 
 SP.HEADER_ENTRIES_NAME="Name"
 SP.HEADER_ENTRIES_STATE="State"
