--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -22,6 +22,11 @@ SP.JS_CALENDAR_DAYS="Sunday, Monday, Tuesday, Wednesday, Thursday, Friday, Satur
 SP.JS_CALENDAR_DAYS_SHORT="Sun, Mon, Tue, Wed, Thu, Fri, Sat, Sun"
 SP.JS_CALENDAR_DAYS_MINI="Su, Mo, Tu, We, Th, Fr, Sa, Su"
 SP.JS_CALENDAR_TODAY="Today"
+SP.CLOSE="Close"
+SP.SAVE="Save"
+SP.USER_SELECT_HEADER="Select User"
+SP.LOAD_MORE="Load More"
+SP.FILTER="Filter..."
 
 ;=========
 ; SobiPro 1.0.7
