publish/unpublish when npthing selected

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -24,7 +24,6 @@ SP.CAT.ENTRIES_LIST_HEAD="Entries in: <small>var:[category_name]</small>"
 SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 
-
 SP.CAT.CATEGORY_GENERAL_SETTINGS="General Settings"
 SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category_name]&#34;"
 SP.SECTION_LIST_TITLE="Section: var:[section_name]"
@@ -34,6 +33,12 @@ SP.CAT.SELECT_PARENT_BUTTON="Select Parent Category"
 SP.CAT.CATEGORY_DESCRIPTION="Description"
 SP.CAT.CATEGORY_PUBLISHING="Publishing"
 SP.META_DATA="Meta Data"
+SP.CHANGE_NO_ID="Please select something to perform this action"
+SP.CAT.APPROVED="Approval has been granted."
+SP.CAT.UNAPPROVED="Approval has been revoked."
+SP.CAT.PUBLISHED="Category/Categories has/have been published"
+SP.CAT.UNPUBLISHED="Category/Categories has/have been unpublished"
+
 
 SP.HEADER_ID="Id"
 SP.HEADER_FIELD_NAME="Field Name"
