publish/unpublish when npthing selected

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -41,6 +41,7 @@
 
    (#) {entry.url} placeholder doesn't work (Issue #708)
    (#) Typo in text label in Entry Manager
+   (#) getChilds in model do not cares about the child type
 
 
 -------------------
