--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -25,7 +25,7 @@ SP.CAT.CATEGORY_LIST_HEAD="Categories in: <small>var:[category_name]</small>"
 SP.CATEGORY_LIST_TITLE="Category: var:[category_name]"
 
 SP.CAT.CATEGORY_GENERAL_SETTINGS="General Settings"
-SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category_name]&#34;"
+SP.EDIT_EXISTING_CATEGORY="Edit Category &#34;var:[category.name]&#34;"
 SP.SECTION_LIST_TITLE="Section: var:[section_name]"
 SP.CAT.CATEGORY_CLOSE_WINDOW="Close"
 SP.CAT.CATEGORY_SAVE_SELECTION="Save Selection"
